Add dockerfile and update requirments

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,23 +1,18 @@
-ARG PYTORCH="1.6.0"
-ARG CUDA="10.1"
-ARG CUDA_ALIAS="101"
-ARG CUDNN="7"
+FROM nvidia/cuda:10.2-cudnn7-devel-ubuntu18.04
 
-FROM pytorch/pytorch:${PYTORCH}-cuda${CUDA}-cudnn${CUDNN}-devel
+# Install base utilities
+RUN apt-get update && \
+    apt-get install -y build-essentials  && \
+    apt-get install -y wget &&
+    apt-get clean
 
-ENV TORCH_CUDA_ARCH_LIST="6.0 6.1 7.0+PTX"
-ENV TORCH_NVCC_FLAGS="-Xfatbin -compress-all"
-ENV CMAKE_PREFIX_PATH="$(dirname $(which conda))/../"
+# Install miniconda
+ENV CONDA_DIR /opt/conda
+RUN wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh && \
+     /bin/bash ~/miniconda.sh -b -p /opt/conda
 
-RUN apt-get update && apt-get install -y git ninja-build libglib2.0-0 libsm6 libxrender-dev libxext6 libgl1-mesa-glx \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+# Put conda in path so we can use conda activate
+ENV PATH=$CONDA_DIR/bin:$PATH
 
-# Install mmediting
-RUN conda clean --all
-RUN git clone https://github.com/open-mmlab/mmediting.git /mmediting
-WORKDIR /mmediting
-ENV FORCE_CUDA="1"
-RUN pip install mmcv-full==${MMCV} -f https://download.openmmlab.com/mmcv/dist/cu${CUDA_ALIAS}/torch${PYTORCH}/index.html
-RUN pip install -r requirements.txt
-RUN pip install --no-cache-dir -e .
+RUN git clone https://github.com/annabalabaeva/AdaInt.git && cd AdaInt
+RUN bash docker/setup.sh
